force-app/main/default/objects/Scripts__c/Scripts__c.object-meta.xml
<CustomObject>
    <label>Script</label>
    <nameField>
        <label>Scripts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scripts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>