force-app/main/default/objects/Scripts__c/fields/Prescribing_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Prescribing_Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prescribing Doctor</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Scripts</relationshipLabel>
    <relationshipName>Scripts</relationshipName>
    <type>Lookup</type>
</CustomField>