force-app/main/default/objects/Scripts__c/fields/Repeats__c.field-meta.xml
<CustomField>
    <fullName>Repeats__c</fullName>
    <label>Repeats</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>