force-app/main/default/objects/Scripts__c/listViews/All_Scripts.listView-meta.xml
<ListView>
    <fullName>All_Scripts</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Scripts</label>
</ListView>